[gd_scene load_steps=18 format=3 uid="uid://byrblrkj4ab5k"]

[ext_resource type="Script" uid="uid://cp5i3d4ehsbob" path="res://Main/UI/InGame/XpUI/base_xp_ui.gd" id="1_3dysb"]
[ext_resource type="Texture2D" uid="uid://dadb66jjnpji0" path="res://assets/textures/hand_xp_ui/thumb.png" id="1_6ec0q"]
[ext_resource type="Theme" uid="uid://rsglqw8mc02x" path="res://assets/themes/default.tres" id="3_luo3j"]
[ext_resource type="Texture2D" uid="uid://cmskmstru5y4v" path="res://assets/textures/hand_xp_ui/level_up.png" id="4_o4ggq"]
[ext_resource type="LabelSettings" uid="uid://bkvgmwx7m548f" path="res://assets/Labels/xp_ui_text.tres" id="4_y7pyv"]
[ext_resource type="LabelSettings" uid="uid://c8spb6oy55ysy" path="res://assets/Labels/xp_minimized_ui_text.tres" id="6_8r8hs"]

[sub_resource type="Gradient" id="Gradient_6ec0q"]
offsets = PackedFloat32Array(0, 0.883117, 1)
colors = PackedColorArray(0, 0, 0, 0.890196, 0, 0, 0, 0.300586, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3dysb"]
gradient = SubResource("Gradient_6ec0q")
width = 150
height = 1

[sub_resource type="Gradient" id="Gradient_3dysb"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_igr1w"]
gradient = SubResource("Gradient_3dysb")

[sub_resource type="Gradient" id="Gradient_igr1w"]
offsets = PackedFloat32Array(0, 0.676056, 1)
colors = PackedColorArray(0.136826, 0.136826, 0.136826, 1, 0.538019, 0.538019, 0.538019, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lrq8j"]
gradient = SubResource("Gradient_igr1w")

[sub_resource type="GDScript" id="GDScript_3dysb"]
script/source = "extends TextureProgressBar

@export var weapon_experience: Node
var initial_value: float = 0

# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	if weapon_experience:
		weapon_experience.experience_change.connect(update)
		update()
	else:
		pass

func update():
	initial_value = weapon_experience.experience
	while initial_value > weapon_experience.upgrade_quota:
		initial_value -= weapon_experience.upgrade_quota
	value = initial_value

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="Gradient" id="Gradient_ff60f"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vt2vd"]
gradient = SubResource("Gradient_ff60f")

[sub_resource type="Gradient" id="Gradient_nfryv"]
colors = PackedColorArray(0.560601, 0.188851, 0.52211, 1, 0.851309, 0.460016, 0.801553, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vx3hn"]
gradient = SubResource("Gradient_nfryv")

[node name="BaseXpUI" type="Control"]
layout_mode = 3
anchor_right = 0.227
anchor_bottom = 0.045
offset_right = 0.496002
offset_bottom = -0.160002
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 29)
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_3dysb")

[node name="Active" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="BackGradient" type="TextureRect" parent="Active"]
layout_direction = 1
layout_mode = 0
offset_right = 172.0
offset_bottom = 190.0
scale = Vector2(1.5, 0.15)
texture = SubResource("GradientTexture2D_3dysb")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Active"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
offset_right = 152.0
offset_bottom = 19.0
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 3
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Active/HBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
texture = ExtResource("1_6ec0q")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Active/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 1
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="Active/HBoxContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="XpProgressBar" type="TextureProgressBar" parent="Active/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 9)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_igr1w")
texture_progress = SubResource("GradientTexture2D_lrq8j")
script = SubResource("GDScript_3dysb")
metadata/_edit_lock_ = true

[node name="AbilityProgressBar" type="TextureProgressBar" parent="Active/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 3)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_vt2vd")
texture_progress = SubResource("GradientTexture2D_vx3hn")
script = SubResource("GDScript_3dysb")
metadata/_edit_lock_ = true

[node name="Control2" type="Control" parent="Active/HBoxContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="WeaponLevel" type="Label" parent="Active"]
layout_mode = 2
offset_left = 190.0
offset_top = 3.0
offset_right = 231.0
offset_bottom = 34.0
theme = ExtResource("3_luo3j")
text = "Lvl: 1"
label_settings = ExtResource("4_y7pyv")
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LevelUp" type="TextureRect" parent="Active"]
layout_mode = 0
offset_left = 231.0
offset_top = 3.0
offset_right = 331.0
offset_bottom = 103.0
scale = Vector2(0.225, 0.225)
texture = ExtResource("4_o4ggq")
metadata/_edit_lock_ = true

[node name="Minimized" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
metadata/_edit_lock_ = true

[node name="BackGradient" type="TextureRect" parent="Minimized"]
layout_direction = 1
offset_right = 129.0
offset_bottom = 172.0
scale = Vector2(2, 0.1)
texture = SubResource("GradientTexture2D_3dysb")
expand_mode = 4
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="Minimized"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 29.0
offset_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="Minimized"]
custom_minimum_size = Vector2(100, 0)
offset_top = -7.0
offset_right = 157.0
offset_bottom = 15.0
scale = Vector2(1.5, 1.5)
theme_override_constants/separation = 3
metadata/_edit_lock_ = true

[node name="Spacer" type="Control" parent="Minimized/HBoxContainer"]
custom_minimum_size = Vector2(19, 5)
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Minimized/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 1
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="Minimized/HBoxContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="XpProgressBar" type="TextureProgressBar" parent="Minimized/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 3)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_igr1w")
texture_progress = SubResource("GradientTexture2D_lrq8j")
script = SubResource("GDScript_3dysb")
metadata/_edit_lock_ = true

[node name="AbilityProgressBar" type="TextureProgressBar" parent="Minimized/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 3)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
value = 100.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_vt2vd")
texture_progress = SubResource("GradientTexture2D_vx3hn")
script = SubResource("GDScript_3dysb")
metadata/_edit_lock_ = true

[node name="Control2" type="Control" parent="Minimized/HBoxContainer/VBoxContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="WeaponLevel" type="Label" parent="Minimized"]
offset_left = 197.0
offset_top = -4.0
offset_right = 238.0
offset_bottom = 27.0
theme = ExtResource("3_luo3j")
text = "Lvl: 1"
label_settings = ExtResource("6_8r8hs")
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="LevelUp" type="TextureRect" parent="Minimized"]
offset_left = 235.0
offset_top = 1.0
offset_right = 335.0
offset_bottom = 101.0
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_o4ggq")
metadata/_edit_lock_ = true

[node name="LevelUpTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="LevelUpTimer" to="." method="_on_level_up_timer_timeout"]
